# football-players-service

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SETUP_DATA_LOADING.md  demo.ps1  docker-compose.ex3.yml  docker-compose.yml  ex3.txt  pyproject.toml  setup_and_run.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/ai_service/: main.py  requirements.txt  test_main.py
backend/analytics_service/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
backend/analytics_service/app/: __init__.py  ai_engine.py  main.py  models.py
backend/data_scraper/: README.md  load_data.py  verify_data.py
backend/data_scraper/rawData/: .gitignore
backend/football_player_service/: Dockerfile
backend/football_player_service/app/: auth.py  database.py  dependencies.py  main.py  models.py  repository.py  security.py
backend/football_player_service/scripts/: export_openapi.py
backend/football_player_service/tests/: conftest.py  test_players.py
backend/scripts/: demo.py  entrypoint.sh  load_csv_data.py  refresh.py  seed_data.py  worker.py
backend/tests/: test_refresh.py
backend/worker/: Dockerfile  entrypoint.sh  main.py  requirements.txt
backend/worker_service/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
backend/worker_service/app/: __init__.py  tasks.py  worker.py
docs/: EX3-notes.md  EX3_IMPLEMENTATION.md  QUICK_START.md  ai-scout-notes.md
docs/runbooks/: compose.md
football_player_service/: Dockerfile
football_player_service/app/: config.py  dependencies.py  main.py  models.py  repository.py
football_player_service/contracts/: openapi.json
football_player_service/scripts/: export_openapi.py
football_player_service/tests/: conftest.py  test_players.py
frontend/: .env  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/components/: Navbar.css  Navbar.tsx  ProtectedRoute.tsx
frontend/src/components/deleteConfirmModal/: DeleteConfirmModal.css  DeleteConfirmModal.tsx
frontend/src/components/footer/: Footer.css  Footer.tsx
frontend/src/hooks/: usePlayers.ts  usePlayersView.ts
frontend/src/layouts/: RootLayout.css  RootLayout.tsx
frontend/src/pages/: HomePage.css  PlayersPage.css  PlayersPage.tsx
frontend/src/routes/: routes.tsx
frontend/src/services/: api.ts  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
scripts/: refresh.py
(+22 files in other folders)
