[project]
name = "worker-service"
version = "1.0.0"
description = "Background worker service for async tasks"
requires-python = ">=3.13"
dependencies = [
    "redis~=5.2.1",
    "rq~=2.1.0",
    "httpx~=0.28.1",
]

[dependency-groups]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.24.0",
]
